--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,8 +8,22 @@ on:
 
 jobs:
   test:
-    name: Test
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:16
+        env:
+          POSTGRES_USER: root
+          POSTGRES_PASSWORD: secret
+          POSTGRES_DB: testGo
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
       - uses: actions/checkout@v3
 
@@ -17,6 +31,15 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: '1.21.6'
+
+      - name: run golang-migrate
+        run: |
+          curl -L https://github.com/golang-migrate/migrate/releases/download/$version/migrate.$os-$arch.tar.gz | tar xvz
+          sudo mv migrate.$os-$arch /usr/bin/migrate
+          which migrate
+
+      - name: run migrations
+        run: make migrateup
 
       - name: Test
         run: make test
