--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: run golang-migrate
         run: |
-          curl -L https://github.com/golang-migrate/migrate/releases/download/$version/migrate.$os-$arch.tar.gz | tar xvz
+          curl -L https://github.com/golang-migrate/migrate/releases/download/v4.17.0/migrate.$os-$arch.tar.gz | tar xvz
           sudo mv migrate.$os-$arch /usr/bin/migrate
           which migrate
 
