--- a/app.env
+++ b/app.env
@@ -1,2 +1,6 @@
-DB_SOURCE=postgres://root:secret@localhost:5432/testGo?sslmode=disable
-SERVER_ADDRESS=0.0.0.0:8080
+DB_SOURCE = postgres://root:secret@localhost:5432/testGo?sslmode=disable
+SERVER_ADDRESS = 0.0.0.0:8080
+
+SECRET_TOKEN = secret_token
+ACCESS_TOKEN_DURATION = 30m
+REFRESH_TOKEN_DURATION = 24h
